update pattern + fix overlap text

--- a/styles/bureau.scss
+++ b/styles/bureau.scss
@@ -231,6 +231,7 @@
 				.image{
 					width: auto;
 					max-height: 70vh;
+					height: auto;
 					margin: 14px 14px 0 0;
 					img{
 						object-fit: contain;
